[package]
name = "solana-cluster-type"
description = "Solana ClusterType enum"
documentation = "https://docs.rs/solana-cluster-type"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
default = []
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "std"]
serde = ["dep:serde", "dep:serde_derive"]
std = ["serde?/std"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, features = [
    "frozen-abi",
], optional = true }
solana-frozen-abi-macro = { workspace = true, features = [
    "frozen-abi",
], optional = true }
solana-hash = { workspace = true, features = ["decode"] }
