[package]
name = "solana-hash"
description = "Solana wrapper for the 32-byte output of a hashing algorithm."
documentation = "https://docs.rs/solana-hash"
version = "3.0.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
borsh = ["solana-hash-v4/borsh"]
bytemuck = ["solana-hash-v4/bytemuck"]
default = ["std"]
frozen-abi = ["solana-hash-v4/frozen-abi"]
serde = ["solana-hash-v4/serde"]
std = ["solana-hash-v4/std"]

[dependencies]
solana-hash-v4 = { package = "solana-hash", version = "4.0", features = ["atomic", "copy", "decode", "sanitize"] }

[lints]
workspace = true
