[package]
name = "solana-seed-derivable"
description = "Solana trait defining the interface by which keys are derived."
documentation = "https://docs.rs/solana-seed-derivable"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
solana-derivation-path = { workspace = true }
